<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_add_customer">

    <fragment
        android:id="@+id/nav_add_customer"
        android:name="com.sharmadairy.ui.customer.AddCustomerFragment"
        android:label="@string/menu_add_customer"
        tools:layout="@layout/fragment_add_customer" />

    <fragment
        android:id="@+id/nav_hazri"
        android:name="com.sharmadairy.ui.hazri.CustomerListFragment"
        android:label="@string/menu_hazri"
        tools:layout="@layout/fragment_customer_list" />

    <fragment
        android:id="@+id/nav_cows"
        android:name="com.sharmadairy.ui.cows.CowFragment"
        android:label="@string/menu_cows"
        tools:layout="@layout/fragment_cow" />

    <fragment
        android:id="@+id/nav_calender"
        android:name="com.sharmadairy.ui.calender.CalenderFragment"
        android:label="@string/menu_calender"
        tools:layout="@layout/fragment_calender" />
</navigation>